[gd_scene load_steps=6 format=3 uid="uid://bxnh3r8bnlqdu"]

[ext_resource type="Script" path="res://scripts/units/BaseUnit.gd" id="1_0w1mh"]
[ext_resource type="Texture2D" path="res://assets/sprites/units/worker.png" id="2_p7qw5"]
[ext_resource type="Texture2D" path="res://assets/sprites/selection_circle.png" id="3_select"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 320.0

[node name="BaseUnit" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_0w1mh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_p7qw5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="SelectionCircle" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_select")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = -30.0
max_value = 100.0
value = 100.0
show_percentage = false

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_2")
